Potential error swallowing in resharding_donor_service

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v7.3, v7.2, v7.0, v6.0, v5.0
    • Cluster Scalability 2024-3-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      During an investigation that resulted in SERVER-86355 we attempted to force all callback functions used by Future::onCompletion to always return something.

      As a result we identified that there might be a bug present in this function

            Assignee:
            Erin Liang
            Reporter:
            Jordi Olivares Provencio
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: