SERVER-86397 Prevent error being swallowed in resharding_donor_service (#19568)

GitOrigin-RevId: 77a90219f77a4d8837c465b8de2cd30c382cc5bf